--- a/html/on_change.html
+++ b/html/on_change.html
@@ -26,6 +26,21 @@
     <link rel="stylesheet" href="../css/nojs.css">
   </noscript>
 
+  <style>
+    ol {
+      padding-left: 10%;
+    }
+
+    ol ol {
+      padding-left: 5%;
+    }
+
+    ol>li {
+      padding-bottom: 0.2em;
+    }
+  </style>
+
+
 </head>
 
 <body>
@@ -63,25 +78,43 @@
         <article>
           <noscript><span>This Web Site requires JavaScript!</span></noscript>
           <h1 class="count">Introduction</h1>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
-            repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
-          </p>
+          <ol>
+            <li>
+              The change event is fired for
+              <ol>
+                <li>input
+                <li>select
+                <li>textarea
+              </ol>
+              elements when the user modifies the element's value
+            <li>
+              Unlike the input event, the change event is not necessarily fired for each alteration to an element's
+              value.
+          </ol>
         </article>
 
         <article>
           <h1 class="count">Code Example</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
-            iusto
-            totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
-          </p>
 
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-INSERT CODE
-              </pre><!-- code-content -->
+&lt;div&gt;
+  &lt;select name="my_select" id="my_select"&gt;
+    &lt;option value="kildare"&gt;Kildare&lt;/option&gt;
+    &lt;option value="dublin" selected&gt;Dublin&lt;/option&gt;
+    &lt;option value="wicklow"&gt;Wicklow&lt;/option&gt;
+  &lt;/select&gt;
+&lt;/div&gt;
+
+    ---
+
+document.getElementsByTagName("select")[0]
+  .addEventListener('change',
+    (event) => console.log(
+      event.target.parentElement.style.border="2px solid red"
+    )
+); </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -92,7 +125,13 @@ INSERT CODE
 INSERT CONSOLE OUTPUT (small view) 
               </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
+<div>
+  <select name="my_select" id="my_select">
+    <option value="kildare">Kildare</option>
+    <option value="dublin" selected>Dublin</option>
+    <option value="wicklow">Wicklow</option>
+  </select>
+</div>
               </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
         </article>
@@ -218,7 +257,7 @@ INSERT CONSOLE OUTPUT THREE (wide view)
             <summary class="details-refs-summary">[JavaScript Inserts]</summary>
             <div class="ref-container details-refs-aclass">
               <div class="ref">
-                <a href="https://www.google.ie">Google</a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/change_event">MDN: change</a>
               </div>
 
               <div class="ref">
@@ -400,6 +439,12 @@ INSERT CONSOLE OUTPUT THREE (wide view)
         toggleClass(this, "open", "details-refs-aclass", "details-refs-bclass");
       }
     );
+
+
+    // Select Example
+
+    document.getElementsByTagName("select")[0].addEventListener('change',
+      (event) => console.log("hello", event.target.parentElement.style.border = "2px solid red"));
 
   </script>
 
