correct typo in on_input.html (missing li tag)

--- a/html/on_input.html
+++ b/html/on_input.html
@@ -78,15 +78,15 @@
           <noscript><span>This Web Site requires JavaScript!</span></noscript>
           <h1 class="count">Introduction</h1>
           <ol>
-            The input event fires when the value of an
-            <ol>
-              <li><code>input</code>
-              <li><code>select</code>
-              <li><code>textarea</code>
-            </ol>
+            <li>The input event fires when the value of an
+              <ol>
+                <li><code>input</code>
+                <li><code>select</code>
+                <li><code>textarea</code>
+              </ol>
 
-            element has been changed as a direct result of a user action (such as typing in a textbox or checking a
-            checkbox)
+              element has been changed as a direct result of a user action (such as typing in a textbox or checking a
+              checkbox)
 
             <li>
               The input event is fired every time the value of the element changes
