fix typo (change ^ to **) in power.html

--- a/html/power.html
+++ b/html/power.html
@@ -361,7 +361,7 @@ console.log((2 ** 3) ** 2)</pre><!-- code-content -->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
 console.log(0**5)
-console.log(0^0)
+console.log(0**0)
 console.log(0**-2)
 console.log((-0) ** -2)</pre><!-- code-content -->
                     </details><!--details CODE-->
@@ -375,12 +375,12 @@ console.log((-0) ** -2)</pre><!-- code-content -->
                         </summary>
                         <pre class="details-console-aclass small-view">
 0
-0
+1
 Infinity
 Infinity</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
 0
-0
+1
 Infinity
 Infinity</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
