fix typo (exarray to array) in concat.html

--- a/html/concat.html
+++ b/html/concat.html
@@ -81,7 +81,7 @@
             <li>
               The <code>concat()</code> method of <code>Array</code> instances is used to merge two or more arrays
             <li>
-              This method does not change the existing exarrays, but instead <strong>returns a new array</strong>
+              This method does not change the existing arrays, but instead <strong>returns a new array</strong>
 
             <li>
               The <code>concat()</code> method of <code>String</code> values concatenates the string arguments to this
