--- a/html/use_strict.html
+++ b/html/use_strict.html
@@ -182,7 +182,9 @@ Uncaught ReferenceError:
                         <pre class="details-code-aclass">
 function myfn(a, a, b) {
    return [a,a,b]
-} </pre><!-- code-content -->
+} 
+
+myfn(1,2,3)</pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -210,7 +212,7 @@ function myfn2 (a, a, b) {
     return arguments[0]
 }
 
-console.log(1,2,3);
+console.log(myfn2(1,2,3)));
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
