--- a/html/date_quiz.html
+++ b/html/date_quiz.html
@@ -539,6 +539,7 @@ Q) 1
 2) d.getFullYear()
 3) d.getDay()
 4) d.getDate() 
+5) d.getMonth() 
 </pre><!-- code-content -->
                     </details><!--details CODE-->
 
@@ -570,6 +571,7 @@ Q) 5
 2) d.getFullYear()
 3) d.getDay()
 4) d.getDate() 
+5) d.getMonth() 
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
@@ -602,6 +604,7 @@ Q) 23
 2) d.getFullYear()
 3) d.getDay()
 4) d.getDate() 
+5) d.getMonth() 
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
