--- a/html/forms_get_fetch.html
+++ b/html/forms_get_fetch.html
@@ -197,9 +197,7 @@
         }
       }
       return tmp;
-    }
-
-              </pre><!-- code-content -->
+    } </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -207,7 +205,6 @@
           <details open><!--Details CONSOLE -->
             <summary class="details-console-summary">[JavaScript Inserts]</summary>
             <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
               </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
   <form action="https://phptwo.tomgdow.com" method="GET" id="form_one">
@@ -262,6 +259,264 @@ INSERT CONSOLE OUTPUT (small view)
           </details><!--details CONSOLE -->
         </article>
 
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const obj = document.forms[0].elements
+console.log(obj)</pre><!-- code-content -->
+          </details><!--details CODE-->
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+HTMLFormControlsCollection { 
+
+  0: fieldset.info, 
+  1: input#name, 
+  2: input#email, 
+  3: input.submit, 
+  4: fieldset.output, 
+  5: output#out-name, 
+  6: output#out-email, 
+  7: output#submitted-url, 
+  8: output#returned-querystring, 
+  9: output#server-response, 
+  
+  … }</pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+HTMLFormControlsCollection { 
+
+  0: fieldset.info, 
+  1: input#name, 
+  2: input#email, 
+  3: input.submit, 
+  4: fieldset.output, 
+  5: output#out-name, 
+  6: output#out-email, 
+  7: output#submitted-url, 
+  8: output#returned-querystring, 
+  9: output#server-response, 
+  
+  … }</pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const obj = document.forms[0].elements
+console.log(obj[0].firstElementChild.innerHTML); </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+Personal Information</pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+Personal Information</pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const obj = document.forms[0].elements
+console.log(obj[1]); </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+&lt;input id="name" type="text" name="param1"&gt;</pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+&lt;input id="name" type="text" name="param1"&gt;</pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const obj = document.forms[0].elements
+
+for(let el of [1,2]) 
+  console.log("abc",obj[el].name)</pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+param1
+param2 </pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+param1
+param2 </pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const obj = document.forms[0].elements
+
+for (let el of [1, 2])
+  console.log("abcd", obj[el].value) </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+myname 
+myemail@gmail.com</pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+myname 
+myemail@gmail.com</pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const formData = new FormData(form_one);
+
+console.log(formData) </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+FormData { param1 → "myname", param2 → "myemail@gmail.com" } </pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+FormData { param1 → "myname", param2 → "myemail@gmail.com" } </pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const formData = new FormData(form_one);
+
+console.log(Object.fromEntries(formData))</pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+Object { param1: "myname", param2: "myemail@gmail.com" }</pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+Object { param1: "myname", param2: "myemail@gmail.com" }</pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const formData = new FormData(form_one);
+
+console.log(formData.get("param1"))
+console.log(formData.get("param2")) </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+myname 
+myemail@gmail.com </pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+myname 
+myemail@gmail.com </pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+INSERT CODE THREE
+  </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT THREE (small view) 
+</pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT THREE (wide view) 
+</pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
         <!--here-->
 
         <article>
@@ -521,6 +776,7 @@ INSERT CONSOLE OUTPUT (small view)
       }
       return tmp;
     }
+
 
   </script>
 
